--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,15 @@
 /smartsettlers/
 /pomcpUtili/
 /bayesianInference/
+/bin/
+/convNNSettler/
+/dataGeneration/
+/docs/
+/experiment/
+/hmminference/
+/java/
+/resources/
+/soc/
+/tradingPOMDPs/
+/uct/
+/web/
