--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,13 @@
+/observationalGraph/
+/bayesianInference/
+/convNNSettler/
+/dataGeneration/
+/experiment/
+/factoryFacility/
+/hmmUtitli/
+/markovModelUtili/
+/pomcpUtili/
 /smartsettlers/
 /soc/
 /tradingPOMDPs/
 /uct/
-/pomcpUtili/
-/HMMUtitli/
-/factoryFacility/
-/hmmUtitli/
-/markovModelUtili/
