"Working on Factory to help handle the garbage collector in java"

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,4 @@
-/smartsettlers/
-/soc/
-/tradingPOMDPs/
-/uct/
 /pomcpUtili/
-/HMMUtitli/
+/smartsettlers/
+/bayesianInference/
 /factoryFacility/
-/hmmUtitli/
-/markovModelUtili/
