Finish translation data into 3D Matrix

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,13 @@
-/observationalGraph/
-/uct/
-/smartsettlers/
-/pomcpUtili/
 /bayesianInference/
+/convNNSettler/
+/dataGeneration/
+/experiment/
 /factoryFacility/
 /hmmUtitli/
 /markovModelUtili/
+/observationalGraph/
+/pomcpUtili/
+/smartsettlers/
+/soc/
+/tradingPOMDPs/
+/uct/
