--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="/home/makara/Documents/workingdirectoryHDF/CMake-hdf-java-3.2/build/HDFJAVA-3.2.1-Linux/HDF_Group/HDFJAVA/3.2.1/lib/jarhdf5-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/home/makara/Documents/workingdirectoryHDF/CMake-hdf-java-3.2/build/HDFJAVA-3.2.1-Linux/HDF_Group/HDFJAVA/3.2.1/lib/jarhdf-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/home/makara/Documents/workingdirectoryHDF/CMake-hdf-java-3.2/build/HDFJAVA-3.2.1-Linux/HDF_Group/HDFJAVA/3.2.1/lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="/home/makara/Documents/workingdirectoryHDF/CMake-hdf-java-3.2/build/HDFJAVA-3.2.1-Linux/HDF_Group/HDFJAVA/3.2.1/lib/slf4j-simple-1.7.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
