--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,12 @@
+/AppFrame.form
+/DebugFrame.form
+/bin/
+/docs/
+/java/
+/resources/
+/smartsettlers/
+/soc/
+/web/
 /bayesianInference/
 /convNNSettler/
 /dataGeneration/
@@ -7,7 +16,5 @@
 /markovModelUtili/
 /observationalGraph/
 /pomcpUtili/
-/smartsettlers/
-/soc/
 /tradingPOMDPs/
 /uct/
